REG-2 Additional BE functionality + tests
